# credit-memo-agent

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  store.pckl
agent/: deep_agent.py  graph.py  main.py  middleware.py
agent/data/: deals.db  seed_db.py
agent/data/internal_docs/: acme_corp_q3_review.md  globaltech_credit_note.md  summit_healthcare_memo.md
agent/skills/credit-memo-template/: SKILL.md
agent/subagents/: calculations.py  data.py  research.py
agent/tools/: memo_writer.py  memory_tools.py  rag_retriever.py  sandbox_calc.py  sqlite_query.py  web_search.py
eval/: dataset.py  evaluators.py  run_eval.py
